<resources>

    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="create_a_story">Create_Story</string>
    <string name="todo">Todo</string>
    <string name="iron_man">Iron Man</string>
    <string name="gamer">Gamer</string>
    <string name="tod">TODO</string>
    <string name="to">TODO</string>
    <string name="t">TODO</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="photos">Photos</string>
    <string name="_4566">4566</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="requests">Requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hsuhuhkueh_jehkefhkjnkejnfkjn">hsuhuhkueh jehkefhkjnkejnfkjn</string>
    <string name="_05_59pm">05:59PM</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>
    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="name">Name</string>
    <string name="spiderman">spiderman</string>
    <string name="follow">FOLLOW</string>
    <string name="Discover">DISCOVER</string>
    <string name="Notification">NOTIFICATION</string>
    <string name="create_post">Create Post</string>
    <string name="post">POST</string>
    <string name="add_image_to_your_post">Add Image To Your Post</string>
    <string name="what_s_on_your_mind">What\'s On Your Mind?</string>
    <string name="_0">0</string>
    <string name="add_comment">Add Comment</string>
    <string name="delete">Delete</string>


</resources>