<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0AFFFFFF"
    android:scrollbars="none"
    app:layout_scrollEffect="none"
    app:layout_scrollFlags="noScroll"
    tools:context=".fragement.add">

    <View
        android:id="@+id/view4"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:text="@string/create_post"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userId"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_imagenotset"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <Button
        android:id="@+id/post"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="#BFC7E0"
        android:enabled="false"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <EditText
        android:id="@+id/posttext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@android:drawable/screen_background_light_transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/what_s_on_your_mind"
        android:inputType="textMultiLine|textPersonName"
        android:maxLines="10"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarDefaultDelayBeforeFade="0"
        android:scrollbars="none"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/postimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/userId"
        app:layout_constraintStart_toEndOf="@+id/userId"
        app:layout_constraintTop_toTopOf="@+id/userId" />

    <ImageView
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@color/black"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_editimage"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/postimage"
        android:layout_width="0dp"
        android:layout_height="257dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#07FFFFFF"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_imagenotset"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_image_to_your_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectImage"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>