<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/users"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userId"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_imagenotset"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/userId"
        app:layout_constraintStart_toEndOf="@+id/userId"
        app:layout_constraintTop_toTopOf="@+id/userId"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/postingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/commentcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/comment"
        app:layout_constraintStart_toEndOf="@+id/comment"
        app:layout_constraintTop_toTopOf="@+id/comment" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="0dp"
        android:layout_height="266dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tod"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId"
        app:srcCompat="@drawable/ic_imagenotset"
        tools:srcCompat="@drawable/ic_imagenotset" />

    <ImageView
        android:id="@+id/dots3"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:contentDescription="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/userId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userId"
        app:srcCompat="@drawable/dot3" />

    <TextView
        android:id="@+id/dislikecount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/dislike"
        app:layout_constraintStart_toEndOf="@+id/dislike"
        app:layout_constraintTop_toTopOf="@+id/dislike" />

    <ImageView
        android:id="@+id/dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/likecount"
        app:layout_constraintStart_toEndOf="@+id/likecount"
        app:layout_constraintTop_toTopOf="@+id/likecount"
        app:srcCompat="@drawable/ic_dislike" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:contentDescription="@string/t"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postdiscription"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/likecount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/commentcount"
        app:layout_constraintStart_toEndOf="@+id/commentcount"
        app:layout_constraintTop_toTopOf="@+id/commentcount"
        app:srcCompat="@drawable/ic_send"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/dislikecount"
        app:layout_constraintStart_toEndOf="@+id/dislikecount"
        app:layout_constraintTop_toTopOf="@+id/dislikecount"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/ic_comment" />

    <TextView
        android:id="@+id/postdiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>